[package]
name = "item-write-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
item-core = { git = "https://github.com/blitzfilter/item-core", branch = "main" }
item-write = { git = "https://github.com/blitzfilter/item-write", branch = "main" }
lambda_runtime = "0.13.0"
aws-config = "1.6.2"
aws-sdk-config = "1.68.0"
aws-sdk-dynamodb = "1.72.0"
aws_lambda_events = "0.16.0"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros"] }

[dev-dependencies]
test-api = { git = "https://github.com/blitzfilter/test-api", branch = "main" }
serial_test = "3.2.0"
item-read = { git = "https://github.com/blitzfilter/item-read", branch = "main" }
