[package]
name = "item-write-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
item-core = { git = "https://github.com/blitzfilter/item-core", branch = "main" }
item-write = { git = "https://github.com/blitzfilter/item-write", branch = "main" }
lambda_runtime = "0.13.0"
aws-config = "1.6.3"
aws-sdk-dynamodb = "1.74.0"
aws_lambda_events = "0.16.0"
serde_json = "1.0.140"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"]}
tokio = { version = "1.45.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing = "0.1.41"
dotenvy = "0.15.7"

[dev-dependencies]
test-api = { git = "https://github.com/blitzfilter/test-api", branch = "main" }
serial_test = "3.2.0"
item-read = { git = "https://github.com/blitzfilter/item-read", branch = "main" }
